[package]
name = "qmluic-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"  # should be sync with build.yml
license = "MIT"

[dependencies]
anyhow = "1.0"
camino = "1.1.6"
clap = { version = "4.3", features = ["derive"] }
codespan-reporting = "0.11"
console = "0.15"
ctrlc = "3.4"
log = "0.4"
notify = "6.1.1"
once_cell = "1.19"
pretty_env_logger = "0.5"
qmluic = { version = "=0.1.0", path = "lib" }
serde_json = "1.0"
tempfile = "3.10"
termcolor = "1.4"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0.11"
insta = "1.34"

[workspace]
members = ["lib"]

[[bin]]
name = "qmluic"
path = "src/main.rs"
doc = false
