[package]
name = "qmluic-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"  # should be sync with build.yml
license = "MIT"

[dependencies]
anyhow = "1.0"
camino = "1.1.11"
clap = { version = "4.5", features = ["derive"] }
codespan-reporting = "0.12"
console = "0.16"
ctrlc = "3.4"
log = "0.4"
notify = "7.0.0"
once_cell = "1.21"
pretty_env_logger = "0.5"
qmluic = { version = "=0.1.0", path = "lib" }
serde_json = "1.0"
tempfile = "3.20"
termcolor = "1.4"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43"

[workspace]
members = ["lib"]

[[bin]]
name = "qmluic"
path = "src/main.rs"
doc = false
