[package]
name = "qmluic"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
camino = "1.1.9"
itertools = "0.13"
log = "0.4"
once_cell = "1.20"
quick-xml = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.24"
tree-sitter-qmljs = "0.1"

[dev-dependencies]
insta = "1.41"
