[package]
name = "qmluic"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
camino = "1.2.2"
itertools = "0.14"
log = "0.4"
once_cell = "1.21"
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.24"
tree-sitter-qmljs = "0.3"

[dev-dependencies]
insta = "1.46"
